# image-labeling-website

./: Makefile  README.md  test_labeler_removal.md
backend/: .gitignore  API_USAGE.md  Cargo.toml
backend/src/: database.rs  lib.rs  main.rs
backend/src/entity/: admin.rs  final_tags.rs  group.rs  image.rs  image_tags.rs  labeler.rs  labeler_groups.rs  mod.rs  tag.rs
backend/src/middleware/: auth.rs
backend/src/repository/: admin.rs  final_tags.rs  group.rs  image.rs  image_tags.rs  labeler.rs  labeler_groups.rs  mod.rs  tag.rs
backend/src/routes/: auth.rs  mod.rs
backend/src/routes/admin/: export.rs  final_tags.rs  groups.rs  image.rs  labeler.rs  mod.rs  tag.rs
backend/src/routes/labeler/: groups.rs  images.rs  mod.rs
backend/src/schemas/: admin.rs  auth.rs  export.rs  labeler.rs  mod.rs
backend/src/service/: admin.rs  auth.rs  export.rs  labeler.rs  mod.rs  openai.rs
backend/tests/: auth_route_test.rs  auth_test.rs  database_test.rs  entity_test.rs
backend/tests/common/: test_utils.rs
backend/tests/entity/: admin_test.rs  group_test.rs  image_tags_test.rs  image_test.rs  labeler_test.rs  mod.rs  tag_test.rs
backend/tests/routes/: auth_test.rs  mod.rs
backend/tests/schemas/: mod.rs
backend/tests/service/: auth_test.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BackButton.tsx  Button.tsx  Card.tsx  EmptyState.tsx  ErrorMessage.tsx  FormInput.tsx  ImageUploader.tsx  LabelerSelectionModal.tsx  LoadingSpinner.tsx  Modal.tsx  Navbar.tsx  PageHeader.tsx  Table.tsx  (+6 more)
(+13 files in other folders)
