[package]
name = "image-labeling-website"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.0"
